Fixed an issue on Firefox where the responsive table wrapper would break outside the flexbox setup. Fixes #98.

--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -36,7 +36,7 @@ footer {
   }
 
   > div {
-    flex: 1 1 0;
+    flex: 1 1 auto;
     padding: $spacer / 4 $spacer 0;
 
     @include at($screen-sm) {
